[project]
name = "libraries_wagtail"
version = "5.0.0"
description = "CCA Libraries Wagtail website"
authors = [
    {"name"= "Eric Phetteplace", email = "ephetteplace@cca.edu"},
    {"name"= "Mark Goh", email = "mgoh@cca.edu"},
]
license = "ECL-2.0"
license-files = ["LICENSE.txt"]
readme = "readme.md"
# Python version must match Dockerfile and mise.toml
requires-python = "==3.12.11"
dependencies = [
    "dj-database-url==3.0.1",
    "django==4.2.23",
    "django-cas-ng==5.0.1",
    "django-extensions==4.1",
    "django-storages[google]==1.14.6",
    "djangorestframework-simplejwt==5.5.1",
    "elasticsearch==9.1.0",
    "google-cloud-secret-manager==2.24.0",
    "l18n==2021.3",
    "psycopg2==2.9.10",
    "pysftp==0.2.9",
    "uwsgi==2.0.30",
    "xmltodict==0.14.2",
    "wagtail==5.2.8",
    "whitenoise[brotli]==6.9.0",
]

[project.urls]
changelog = "https://github.com/cca/libraries_wagtail/tree/main/docs/CHANGELOG.md"
documentation = "https://github.com/cca/libraries_wagtail/tree/main/docs"
homepage = "https://github.com/cca/libraries_wagtail"
issues = "https://github.com/cca/libraries_wagtail/issues"
repository = "https://github.com/cca/libraries_wagtail"

[tool.uv]
dev-dependencies = [
    "autopep8",
    "django_managepy_anywhere==2.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
