[project]
name = "libraries_wagtail"
version = "6.4.0"
description = "CCA Libraries Wagtail website"
authors = [
    {"name"= "Eric Phetteplace", email = "ephetteplace@cca.edu"},
    {"name"= "Mark Goh", email = "mgoh@cca.edu"},
]
license = "ECL-2.0"
license-files = ["LICENSE.txt"]
readme = "readme.md"
# Python version must match Dockerfile and mise.toml
requires-python = ">=3.13,<3.14"
dependencies = [
    "dj-database-url==3.1.0",
    "django==5.2.11",
    "django-cas-ng==5.1.0",
    "django-extensions==4.1",
    "django-storages[google]==1.14.6",
    "djangorestframework-simplejwt==5.5.1",
    "elasticsearch==7.17.13",
    "google-cloud-secret-manager==2.26.0",
    "l18n==2021.3",
    "psycopg2==2.9.11",
    "pysftp==0.2.9",
    "uwsgi==2.0.31",
    "xmltodict==1.0.2",
    "wagtail==7.0.4",
    "whitenoise[brotli]==6.11.0",
]

[project.urls]
changelog = "https://github.com/cca/libraries_wagtail/tree/main/docs/CHANGELOG.md"
documentation = "https://github.com/cca/libraries_wagtail/tree/main/docs"
homepage = "https://github.com/cca/libraries_wagtail"
issues = "https://github.com/cca/libraries_wagtail/issues"
repository = "https://github.com/cca/libraries_wagtail"

[dependency-groups]
dev = []

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
